# bpc_engine

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
configs/16bit/: deepseek_r1_mla_16bit.json  deepseek_v4_pro_16bit.json  glm_5_2_dsa_16bit.json  llama_3_3_70b_16bit.json  mamba_2_8b_16bit.json  qwen3_235b_a22b_16bit.json  qwen3_4b_16bit.json  qwen3_8b_16bit.json  qwen3_next_80b_a3b_16bit.json
configs/2022/: README.md  bloom_176b_bf16.json  palm_540b_int8w_bf16kv.json
configs/2023/: README.md  falcon_180b_bf16.json  (+3 more)
decode_engine/: __init__.py  cli.py  config.py  engine.py  mechanisms.py  schema.py
docs/: LLM模型架构演进图谱_2023-2026_v0.1.docx  decode_trend_data_dictionary.md  decode_trend_field_capability_matrix.md  decode_trend_p8_envelope_plan.md  decode_trend_p8_envelope_report.md  decode_trend_p8_visualization_revision_plan.md  decode_trend_p9a_technology_trends_plan.md  decode_trend_p9a_technology_trends_report.md  decode_trend_research_todo.md  decode_trend_sample_manifest.md  prefill_metrics.md
examples/: mechanism_catalog.json
scripts/: analyze_decode_technology_trends.py  analyze_decode_trend_envelope.py  freeze_decode_trend_release.py  generate_decode_ratio_plots-4bit.py  generate_decode_ratio_plots_16bit.py  generate_decode_ratio_plots_8bit.py  generate_precision_configs.py  generate_prefill_plots.py
tests/: __init__.py  test_chunked_block.py  test_decode_technology_trends.py  test_decode_trend.py  test_decode_trend_envelope.py  test_decode_trend_release.py  test_engine.py  test_p3_audit.py  test_prefill.py  test_prefill_plots.py
(+78 files in other folders)
